fix: error popup z-index

--- a/assets/app.css
+++ b/assets/app.css
@@ -676,7 +676,7 @@ footer {
   text-shadow: 0 0 0 #404040;
 }
 
-#error {
+.error-popup {
   position: fixed;
   top: 40px;
   right: -400px;
@@ -684,29 +684,33 @@ footer {
   padding: 5px;
   width: 300px;
   background-color: #ffffff;
-  z-index: 20;
+  z-index: 101;
 }
 
-.dark #error {
+.dark .error-popup {
   background-color: #404040;
 }
 
-#error.hide {
+.error-popup.hide {
   display: none;
 }
 
-.animation #error.hide {
+.animation .error-popup.hide {
   display: block;
   animation: error-hide 0.3s linear 0s;
 }
 
-#error.show {
+.error-popup.show {
   display: block;
   right: 0;
 }
 
-.animation #error.show {
+.animation .error-popup.show {
   animation: error-show 0.3s linear 0s;
+}
+
+.error-popup > * {
+  margin: 10px;
 }
 
 @keyframes error-show {
@@ -727,10 +731,6 @@ footer {
   to {
     right: -400px;
   }
-}
-
-#error > * {
-  margin: 10px;
 }
 
 button {
